--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,12 +2,85 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}{% endblock %} | Arxiu diocesà de Girona</title>
         {% block stylesheets %}{% endblock %}
+       	{% stylesheets 'bundles/twbs/css/*' output='css/bootstrap.css' %}
+		    <link rel="stylesheet" type="text/css" media="screen" href="{{ asset_url }}" />
+		{% endstylesheets %}
+		<link href="{{ asset('bundles/adg/css/comu.css') }}" rel="stylesheet">
+
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+        
     </head>
     <body>
-        {% block body %}{% endblock %}
+	     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">				
+			    <div class="navbar-header">
+				    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+				      <span class="sr-only">Toggle navigation</span>
+				      <span class="icon-bar"></span>
+				      <span class="icon-bar"></span>
+				      <span class="icon-bar"></span>
+				    </button>
+				    <a class="navbar-brand" href="#">Arxiu diocesà de Girona</a>
+				</div>
+
+			  <div class="collapse navbar-collapse navbar-ex1-collapse">
+
+			    <ul class="nav navbar-nav">
+			      <li class="active"><a href="#">Principal</a></li>
+			      <li class="dropdown">
+			        <a class="dropdown-toggle" data-toggle="dropdown">Arxiu diocesà<b class="caret"></b></a>
+			        <ul class="dropdown-menu">
+			          <li><a href="#">Action</a></li>
+			          <li><a href="#">Another action</a></li>
+			          <li><a href="#">Something else here</a></li>
+			          <li><a href="#">Separated link</a></li>
+			          <li><a href="#">One more separated link</a></li>
+			        </ul>
+			      </li>
+			      <li><a href="#">Arxiu capitular</a></li>
+			      <li class="dropdown">
+			        <a class="dropdown-toggle" data-toggle="dropdown">Biblioteca<b class="caret"></b></a>
+			        <ul class="dropdown-menu">
+			          <li><a href="#">Action</a></li>
+			          <li><a href="#">Another action</a></li>
+			          <li><a href="#">Something else here</a></li>
+			          <li><a href="#">Separated link</a></li>
+			          <li><a href="#">One more separated link</a></li>
+			        </ul>
+			      </li>
+			      <li><a href="#">Normativa</a></li>
+			      <li><a href="#">Contacte</a></li>
+			    </ul>
+			    <ul class="nav navbar-nav navbar-right">
+			      <li><a href="#">Link</a></li>
+			    </ul>
+			  </div>
+		 </nav>
+
+					
+		<div class="container">
+			<div class="row">
+				{% block body %}{% endblock %}
+			</div>
+			<hr>
+			<footer>
+			  <p>Footer</p>
+			</footer>
+		</div>
+        
+        
+        
+        
+        
         {% block javascripts %}{% endblock %}
+        
+        {% javascripts 'bundles/twbs/js/*' output='js/bootstrap.js' %}
+		    <script src="{{ asset_url }}"></script>
+		    <script src="http://code.jquery.com/jquery.js" type="text/javascript"></script>
+		{% endjavascripts %}
+
+
     </body>
 </html>
