--- a/src/ADG/PrincipalBundle/Resources/views/Default/index.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/Default/index.html.twig
@@ -1,22 +1,33 @@
-<!DOCTYPE html>
-<html>
+{% extends '::base.html.twig' %}
 
-	<head>
-		<meta charset="UTF-8" />
-		<title>Index!</title>
-		
-		
-		{% javascripts 'bundles/twbs/js/*' output='js/bootstrap.js' %}
-		    <script src="{{ asset_url }}"></script>
-		{% endjavascripts %}
-		{% stylesheets 'bundles/twbs/css/*' output='css/bootstrap.css' %}
-		    <link rel="stylesheet" type="text/css" media="screen" href="{{ asset_url }}" />
-		{% endstylesheets %}
-	</head>
+{% block title %}Principal{% endblock %}
+
+{% block body %}
 	
-	<body>
+	        <div class="col-lg-4" align="center">
+	        	<div class="space100"></div>
+	            <img src="{{ asset('bundles/adg/img/logo-bisbat.jpg') }}"/><br>
+	            És propietat del Bisbat de Girona.
+	            <img src="{{ asset('bundles/adg/img/logo-diputacio.gif') }}"/><br>
+	            Amb la col·laboració de la Diputació de Girona.
+	        </div>
+	        <div class="col-lg-8">
+	            <div class="page-header"><h1>Notícies</h1></div>
 
+	            <article>
+	            <h3>Lorem ipsum</h3>
+	            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	            </article>
+	
+	            <article>
+	            <h3>Lorem ipsum</h3>
+	            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	            </article>
+	
+	            <article>
+	            <h3>Lorem ipsum</h3>
+	            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	            </article>
+	        </div>
 
-	</body>
-      
-</html>
+{% endblock %}
