--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -4,10 +4,13 @@
         <meta charset="UTF-8" />
         <title>{% block title %}{% endblock %} | Arxiu diocesà de Girona</title>
         
-        <link href="{{ asset('bundles/frontend/css/bootstrap.css') }}" rel="stylesheet">
-	    <link href="{{ asset('bundles/frontend/css/bootstrap-theme.css') }}" rel="stylesheet">
-		<link href="{{ asset('bundles/frontend/css/font-awesome.css') }}" rel="stylesheet">
+        
+        <link href="{{ asset('bundles/frontend/css/font-awesome.css') }}" rel="stylesheet">
 		<link href="{{ asset('bundles/frontend/css/font-awesome-ie7.css') }}" rel="stylesheet">
+        <link href="{{ asset('bundles/frontend/css/bootstrap.min.css') }}" rel="stylesheet">
+	    <link href="{{ asset('bundles/frontend/css/bootstrap-theme.css') }}" rel="stylesheet">
+	    
+
 			
 		<link href="{{ asset('bundles/adg/css/comu.css') }}" rel="stylesheet">
 			
@@ -28,10 +31,10 @@
 				    </button>
 				    <a class="navbar-brand" href="#">Arxiu diocesà de Girona</a>
 				</div>
-
+				
+				<div class="collapse navbar-collapse navbar-ex1-collapse">
 			      {{ knp_menu_render('PrincipalBundle:MenuBuilder:mainMenu', {'currentClass': 'active', 'template': 'PrincipalBundle:Menu:knp_menu.html.twig'}) }}
 				  {{ knp_menu_render('PrincipalBundle:MenuBuilder:userMenu', {'currentClass': 'active', 'template': 'PrincipalBundle:Menu:knp_menu.html.twig'}) }}
-
 			  </div>
 		 </nav>
 		
@@ -47,7 +50,9 @@
 
 
 	    <script src="http://code.jquery.com/jquery.js" type="text/javascript"></script>
-	    <script src="{{ asset('bundles/frontend/js/bootstrap.js') }}" type="text/javascript"></script>	         
+
+
+	    <script src="{{ asset('bundles/frontend/js/bootstrap.min.js') }}" type="text/javascript"></script>	         
         {% block javascripts %}{% endblock %}
 
 
