--- a/src/ADG/PrincipalBundle/Resources/views/Default/index.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/Default/index.html.twig
@@ -8,38 +8,33 @@
 	        	<div class="space100"></div>
 	            <img src="{{ asset('bundles/adg/img/logo-bisbat.jpg') }}"/><br>
 	            És propietat del Bisbat de Girona.
+	            <div class="space10"></div>
 	            <img src="{{ asset('bundles/adg/img/logo-diputacio.gif') }}"/><br>
 	            Amb la col·laboració de la Diputació de Girona.
 	        </div>
+	        
 	        <div class="col-lg-8">
 	            <div class="page-header"><h1>Notícies</h1></div>
-
-	            <article>
-	            <h3>Lorem ipsum</h3>
-	            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-	            </article>
-					    <ul class="nav navbar-nav">
-			      
+	            
+	            {% for noticia in noticies %}
+            		<article>
+	           			<h4>{{ noticia.titol }} - {{ noticia.data }}</h4>
+	           			<p> {{ noticia.contingut }}</p>
+	           		</article>
+	           		<div class="space10"></div>
+				{% endfor %}
+	     
+	        </div>
+	 </div>
+	 
+	 
+	 			<ul class="nav navbar-nav">
 			      <li class="dropdown">
 			        <a class="dropdown-toggle" data-toggle="dropdown">Biblioteca<b class="caret"></b></a>
 			        <ul class="dropdown-menu">
 			          <li><a href="#">Action</a></li>
 			          <li><a href="#">Another action</a></li>
-			          <li><a href="#">Something else here</a></li>
-			          <li><a href="#">Separated link</a></li>
-			          <li><a href="#">One more separated link</a></li>
 			        </ul>
 			      </li>
 			    </ul>
-	            <article>
-	            <h3>Lorem ipsum</h3>
-	            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-	            </article>
-	
-	            <article>
-	            <h3>Lorem ipsum</h3>
-	            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-	            </article>
-	        </div>
-	 </div>
 {% endblock %}
