Some changes in folder architecture

--- a/src/ADG/PrincipalBundle/Resources/views/Default/index.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/Default/index.html.twig
@@ -30,7 +30,7 @@
 	 
 	 			<ul class="nav navbar-nav">
 			      <li class="dropdown">
-			        <a class="dropdown-toggle" data-toggle="dropdown">Biblioteca<b class="caret"></b></a>
+			        <a class="dropdown-toggle" data-toggle="dropdown">test js<b class="caret"></b></a>
 			        <ul class="dropdown-menu">
 			          <li><a href="#">Action</a></li>
 			          <li><a href="#">Another action</a></li>
