--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -4,10 +4,9 @@
         <meta charset="UTF-8" />
         <title>{% block title %}{% endblock %} | Arxiu diocesà de Girona</title>
           
-        <link href="{{ asset('bundles/frontend/css/font-awesome.css') }}" rel="stylesheet">
-		<link href="{{ asset('bundles/frontend/css/font-awesome-ie7.css') }}" rel="stylesheet">
-        <link href="{{ asset('bundles/frontend/css/bootstrap.min.css') }}" rel="stylesheet">
-	    <link href="{{ asset('bundles/frontend/css/bootstrap-theme.css') }}" rel="stylesheet">
+        <link href="{{ asset('bundles/adg/css/font-awesome.css') }}" rel="stylesheet">
+        <link href="{{ asset('bundles/adg/css/bootstrap.min.css') }}" rel="stylesheet">
+
 	    
 		<link href="{{ asset('bundles/adg/css/comu.css') }}" rel="stylesheet">
 			
@@ -18,37 +17,41 @@
         
     </head>
     <body>
-	     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">				
+	     <div class="navbar navbar-default navbar-fixed-top " role="navigation">	
+	
 			    <div class="navbar-header">
-				    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+				    <a class="navbar-brand" href="{{ path('index') }}"">Arxiu diocesà de Girona</a>
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 				      <span class="sr-only">Toggle navigation</span>
 				      <span class="icon-bar"></span>
 				      <span class="icon-bar"></span>
 				      <span class="icon-bar"></span>
 				    </button>
-				    <a class="navbar-brand" href="{{ path('index') }}"">Arxiu diocesà de Girona</a>
+					
 				</div>
-				
-				<div class="collapse navbar-collapse navbar-ex1-collapse">
-			      {{ knp_menu_render('PrincipalBundle:MenuBuilder:mainMenu', {'currentClass': 'active', 'template': 'PrincipalBundle:Menu:knp_menu.html.twig'}) }}
-				  {{ knp_menu_render('PrincipalBundle:MenuBuilder:userMenu', {'currentClass': 'active', 'template': 'PrincipalBundle:Menu:knp_menu.html.twig'}) }}
-			
-			  </div>
-		 </nav>
+				<div class="navbar-collapse collapse">
+		
+				      {{ knp_menu_render('PrincipalBundle:MenuBuilder:mainMenu', {'currentClass': 'active', 'template': 'PrincipalBundle:Menu:knp_menu.html.twig'}) }}
+					  {{ knp_menu_render('PrincipalBundle:MenuBuilder:userMenu', {'currentClass': 'active', 'template': 'PrincipalBundle:Menu:knp_menu.html.twig'}) }}
+					</div>
+		 </div>
 		
 		<div class="container">
-
 			{% block body %}{% endblock %}
-
+		</div>
+		
+		<div class="container">
 			<hr>
 			<footer>
-			  <p>Footer</p>
+				<a href=" {{ path('contacte') }}">
+				<i class="icon-envelope"></i>
+				Contacte21
+				</a>
+
 			</footer>
 		</div>
-
-
-	    <script src="http://code.jquery.com/jquery.js" type="text/javascript"></script>
-	    <script src="{{ asset('bundles/frontend/js/bootstrap.min.js') }}" type="text/javascript"></script>	         
+	    <script src="{{ asset('bundles/adg/js/jquery.js') }}" type="text/javascript"></script>
+	    <script src="{{ asset('bundles/adg/js/bootstrap.min.js') }}" type="text/javascript"></script>	         
         {% block javascripts %}{% endblock %}
 
 
