--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -17,7 +17,7 @@
         
     </head>
     <body>
-	     <div class="navbar navbar-default navbar-fixed-top " role="navigation">	
+	     <div class="navbar navbar-inverse navbar-fixed-top " role="navigation">	
 	
 			    <div class="navbar-header">
 				    <a class="navbar-brand" href="{{ path('index') }}"">Arxiu diocesà de Girona</a>
@@ -33,23 +33,60 @@
 		
 				      {{ knp_menu_render('PrincipalBundle:MenuBuilder:mainMenu', {'currentClass': 'active', 'template': 'PrincipalBundle:Menu:knp_menu.html.twig'}) }}
 					  {{ knp_menu_render('PrincipalBundle:MenuBuilder:userMenu', {'currentClass': 'active', 'template': 'PrincipalBundle:Menu:knp_menu.html.twig'}) }}
-					</div>
+				</div>
 		 </div>
-		
-		<div class="container">
-			{% block body %}{% endblock %}
-		</div>
-		
-		<div class="container">
-			<hr>
-			<footer>
-				<a href=" {{ path('contacte') }}">
-				<i class="icon-envelope"></i>
-				Contacte21
-				</a>
 
-			</footer>
-		</div>
+		  <div class="content">
+ 
+		    <div class="wrapper">
+		    
+		      <div class="container proper-content">
+
+		        		{% block body %}{% endblock %}
+
+		      </div><!-- /.proper-content -->
+ 
+		      <div class="push"></div>
+ 
+		    </div><!-- /.wrapper -->
+ 	
+		    <div class="footer-wrapper">
+		    	<footer>
+					<h4>Arxiu diocesà de Girona</h4>
+					<a href=" {{ path('contacte') }}">
+						<i class="icon-envelope"></i>
+						Contacte
+					</a>
+					
+					<a href=" {{ path('normativa') }}">
+						<i class="icon-file-text-alt"></i>
+						Normativa
+					</a>
+            		{% if is_granted("ROLE_ADMIN") %}
+						<a href=" {{ path('index') }}">
+							<i class="icon-user"></i>
+							Administrar
+						</a>
+						<a href=" {{ path('fos_user_security_logout') }}">
+							<i class="icon-signout"></i>
+							Sortir
+						</a>
+           			{% elseif is_granted("ROLE_USER") %}
+           				<a href=" {{ path('fos_user_security_logout') }}">
+							<i class="icon-signout"></i>
+							Sortir
+						</a>
+					{% else %}
+					    <a href=" {{ path('fos_user_security_login') }}">
+							<i class="icon-signin"></i>
+							Autentificació
+						</a>
+					{% endif %}
+				</footer><!-- /.footer -->
+			</div>
+		  </div>
+
+		
 	    <script src="{{ asset('bundles/adg/js/jquery.js') }}" type="text/javascript"></script>
 	    <script src="{{ asset('bundles/adg/js/bootstrap.min.js') }}" type="text/javascript"></script>	         
         {% block javascripts %}{% endblock %}
