--- a/web/bundles/ADG/css/comu.css
+++ b/web/bundles/ADG/css/comu.css
@@ -10,10 +10,49 @@
     text-align:center;
 } 
 
-body {
-	padding-top: 70px;
-	padding-bottom: 40px;
+html, body, .container, .content {
+    height: 100%;
 }
+ 
+.container, .content {
+    position: relative;
+}
+ 
+.proper-content {
+    padding-top: 50px; /* >= navbar height */
+    padding-left: 40px;
+    padding-right: 40px;
+}
+ 
+.wrapper {
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    margin: 0 auto -70px; /* same as the footer */
+}
+ 
+.push {
+    height: 70px; /* same as the footer */
+}
+.footer-wrapper {
+    position: relative;
+    height: 70px;
+    text-align: center;
+    background-color: #222222;
+  	border-color: #080808;
+  	color: #999;
+  	border-top: 1px solid transparent;
+}
+
+.form-signin{
+	max-width: 200px;
+}
+
+#footer a:hover, a:focus, a:link, a:visited, #footer h4 {
+	  color: #999;
+	  margin-right: 10px;
+}
+
 .sidebar-nav {
 	padding: 9px 0;
 }
