--- a/src/ADG/PrincipalBundle/Resources/views/Default/index.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/Default/index.html.twig
@@ -18,7 +18,7 @@
 	            
 	            {% for noticia in noticies %}
             		<article>
-	           			<h4>{{ noticia.titol }} - {{ noticia.data }}</h4>
+	           			<h4>{{ noticia.titol }} - {{ noticia.data|date('d-m-Y')}}</h4>
 	           			<p> {{ noticia.contingut }}</p>
 	           		</article>
 	           		<div class="space10"></div>
@@ -26,8 +26,6 @@
 	     
 	        </div>
 	 </div>
-	 
-	 
 	 			<ul class="nav navbar-nav">
 			      <li class="dropdown">
 			        <a class="dropdown-toggle" data-toggle="dropdown">test js<b class="caret"></b></a>
