--- a/src/ADG/ArxiuBundle/Resources/views/Default/altre.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/Default/altre.html.twig
@@ -1,6 +1,6 @@
 {% extends '::base.html.twig' %}
 
-{% block title %}Contacte{% endblock %}
+{% block title %}Altre{% endblock %}
 
 {% block body %}
 
