--- a/src/ADG/ArxiuBundle/Resources/views/Default/arxiu.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/Default/arxiu.html.twig
@@ -1,7 +1,29 @@
 {% extends '::base.html.twig' %}
 
-{% block title %}Contacte{% endblock %}
+{% block title %}Arxiu diocesà{% endblock %}
+
+
+
 
 {% block body %}
-		
+
+      <div id="sidebar-wrapper">
+        <ul class="sidebar-nav">
+          <li class="sidebar-brand"><a href="#">Start Bootstrap</a></li>
+          <li><a href="#">Dashboard</a></li>
+          <li><a href="#">Shortcuts</a></li>
+          <li><a href="#">Overview</a></li>
+          <li><a href="#">Events</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Services</a></li>
+        </ul>
+      </div>
+        
+	<div class="page-header">
+		<a id="menu-toggle" href="#" class="btn btn-default"><i class="icon-reorder"></i></a>
+        <h1>Arxiu diocesà</h1>
+	</div>
+
+	<a href="{{ path('arxiu') }}">Home</a>
+
 {% endblock %}
