Subnavbar added for ArxiuBundle

--- a/src/ADG/ArxiuBundle/Resources/views/Default/altre.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/Default/altre.html.twig
@@ -1,7 +1,7 @@
-{% extends '::base.html.twig' %}
+{% extends 'ArxiuBundle::base-arxiu.html.twig' %}
 
 {% block title %}Altre{% endblock %}
 
 {% block body %}
-
+asd
 {% endblock %}
