--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -9,7 +9,7 @@
 
 	    
 		<link href="{{ asset('bundles/adg/css/comu.css') }}" rel="stylesheet">
-			
+
         {% block stylesheets %}{% endblock %}
 		
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,7 +18,6 @@
     </head>
     <body>
 	     <div class="navbar navbar-inverse navbar-fixed-top " role="navigation">	
-	
 			    <div class="navbar-header">
 				    <a class="navbar-brand" href="{{ path('index') }}"">Arxiu diocesà de Girona</a>
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -27,15 +26,13 @@
 				      <span class="icon-bar"></span>
 				      <span class="icon-bar"></span>
 				    </button>
-					
 				</div>
 				<div class="navbar-collapse collapse">
-		
 				      {{ knp_menu_render('PrincipalBundle:MenuBuilder:mainMenu', {'currentClass': 'active', 'template': 'PrincipalBundle:Menu:knp_menu.html.twig'}) }}
 					  {{ knp_menu_render('PrincipalBundle:MenuBuilder:userMenu', {'currentClass': 'active', 'template': 'PrincipalBundle:Menu:knp_menu.html.twig'}) }}
 				</div>
 		 </div>
-
+		{% block subnavbar %}{% endblock %}
 		  <div class="content">
 		    <div class="wrapper">
 		      <div class="container proper-content">
