--- a/web/bundles/ADG/css/comu.css
+++ b/web/bundles/ADG/css/comu.css
@@ -48,9 +48,25 @@ a.foot {
 	margin-right: 10px;
 }
 
-.form-signin{
-	max-width: 200px;
+.account-container {
+	width: 330px; 
+	display: block;
+	margin: 60px auto 0 auto;
+	margin-bottom: 10px;
+	background: #f9f9f9;
+	
+	border: 1px solid #d5d5d5;
+	
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+
+	box-shadow:  0px 0px 2px #dadada, inset 0px -3px 0px #e6e6e6;
 }
+
+.content-form {
+	padding: 16px 28px 23px;
+} 
 
 .sidebar-nav {
 	padding: 9px 0;
