More subnavbar changes

--- a/src/ADG/ArxiuBundle/Resources/views/Default/altre.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/Default/altre.html.twig
@@ -3,5 +3,10 @@
 {% block title %}Altre{% endblock %}
 
 {% block body %}
-asd
+
+	<div class="page-header">
+        <h1>Altre</h1>
+	</div>
+
+	<a href="{{ path('arxiu') }}">Arxiu</a>
 {% endblock %}
