--- a/src/ADG/ArxiuBundle/Resources/views/base-arxiu.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/base-arxiu.html.twig
@@ -10,7 +10,7 @@
 		
 	<div class="subnavbar">
 	  <div class="subnavbar-inner">
-	    <div class="container">
+	    <div class="container-sub">
 	    	 {{ knp_menu_render('ArxiuBundle:SubmenuBuilder:SubMenu', {'currentClass': 'active', 'template': 'ArxiuBundle:Menu:knp_menu.html.twig'}) }}
 	    </div>
 	    <!-- /container --> 
