--- a/app/Resources/views/footer.html.twig
+++ b/app/Resources/views/footer.html.twig
@@ -11,7 +11,7 @@
 						Normativa
 					</a>
             		{% if is_granted("ROLE_ADMIN") %}
-						<a class="foot" href=" {{ path('index') }}">
+						<a class="foot" href=" {{ path('admin') }}">
 							<i class="icon-user"></i>
 							Administrar
 						</a>
