--- a/src/ADG/PrincipalBundle/Resources/views/Admin/admin.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/Admin/admin.html.twig
@@ -13,12 +13,12 @@
 				</div>
 				<div class="panel-body list-group">
 				
-					<a href=" {{ path('admin') }}" class="list-group-item">
+					<a href=" {{ path('noticies') }}" class="list-group-item">
 						<i class="icon-list"></i>
 						Afegir nou
 					</a>
 					
-					<a href=" {{ path('admin') }}" class="list-group-item">
+					<a href=" {{ path('noticies') }}" class="list-group-item">
 						<i class="icon-plus"></i>
 						Afegir nou
 					</a>
