--- a/src/ADG/PrincipalBundle/Resources/views/Admin/noticies.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/Admin/noticies.html.twig
@@ -40,8 +40,8 @@
 
 	{# Cerca #}
 <div class="row" style="margin-left:0px">	
-	<div class="col-xs-6 col-sm-8 well">
-    	<h4>Cerca</h4> 
+	<div class="col-xs-8 col-sm-10 col-md-8 col-lg-6 well">
+    	<h4>Cerca per atributs</h4> 
 		<form class="form">
             <div class="form-inline">
                 <div class="form-group"> 
@@ -56,9 +56,13 @@
 		       <div class="form-group"> 
 		            <button type="submit" class="btn btn-primary"><i class="icon-search"></i>&nbsp;Buscar</button>
 		        </div>
+		        <div class="form-group"> 
+		            <a href=" {{ path('admin') }}" class="btn btn-success"><i class="icon-cog"></i>&nbsp;Afegir nou</a>
+		        </div>
             </div>
 		</form>    	
 	</div>
+
 </div>
 <div class="row">
 	{# Continguts #}
