Added architecture for Admin sites
Plus modal interface

--- a/src/ADG/PrincipalBundle/Resources/views/Admin/general.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/Admin/general.html.twig
@@ -13,14 +13,14 @@
 				</div>
 				<div class="panel-body list-group">
 				
-					<a href=" {{ path('noticies') }}" class="list-group-item">
+					<a href=" {{ path('noticies_index') }}" class="list-group-item">
 						<i class="icon-list"></i>
-						Afegir nou
+						Llistar notícies
 					</a>
 					
-					<a href=" {{ path('noticies') }}" class="list-group-item">
+					<a href=" {{ path('noticies_index') }}" class="list-group-item">
 						<i class="icon-plus"></i>
-						Afegir nou
+						Afegir nova
 					</a>
 				</div>
 			</div>
