--- a/web/bundles/ADG/css/comu.css
+++ b/web/bundles/ADG/css/comu.css
@@ -1,5 +1,8 @@
 /*Custom layout*/
 
+body.modal-open, .modal-open .navbar-fixed-top, .modal-open .navbar-fixed-bottom{
+	margin-right: 0px;
+}
 .fixed-position {
 	position: fixed;
 }
