--- a/src/ADG/PrincipalBundle/Resources/views/Admin/noticies.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/Admin/noticies.html.twig
@@ -23,22 +23,23 @@
         		      },
         			"sSearch": "Cerca general: "
                 }
-        }
-		);
+        }).makeEditable({
+
+		});
 	} );
 		</script>
     </script>
-     <script src="{{ asset('bundles/ADG/js/jquery.dataTables.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('bundles/ADG/js/jquery.dataTables.js') }}" type="text/javascript"></script>
     <script src="{{ asset('bundles/ADG/js/dataTables.bootstrap.js') }}" type="text/javascript"></script>
-   
+   	<script src="{{ asset('bundles/ADG/js/jquery.dataTables.editable.js') }}" type="text/javascript"></script>
 {% endblock %}
 
 {% block title %}Noticies{% endblock %}
 
 {% block body %}
 	<div class="page-header"><h1>Notícies</h1></div>
-
-	{# Cerca #}
+	
+{# Cerca #}
 <div class="row" style="margin-left:0px">	
 	<div class="col-xs-8 col-sm-10 col-md-8 col-lg-6 well">
     	<h4>Cerca per atributs</h4> 
@@ -57,19 +58,20 @@
 		            <button type="submit" class="btn btn-primary"><i class="icon-search"></i>&nbsp;Buscar</button>
 		        </div>
 		        <div class="form-group"> 
-		            <a href=" {{ path('admin') }}" class="btn btn-success"><i class="icon-cog"></i>&nbsp;Afegir nou</a>
+		            <a data-toggle="modal" href="#crearNou" class="btn btn-success"><i class="icon-cog"></i>&nbsp;Afegir nou</a>
 		        </div>
             </div>
 		</form>    	
 	</div>
-
 </div>
+
+
+
+{# Taula #}
 <div class="row">
-	{# Continguts #}
-	<div class="col-lg-12 col-md-12 col-sm-12">
-	
+	<div class="col-lg-12 col-md-12 col-sm-12 table-responsive">
 		{# Taula #}
-		<table class="table table-striped table-bordered" id="noticies_table">
+		<table class="table table-striped table-bordered table-hover" id="noticies_table">
         <thead>
             <tr>
                 <th class="centered-text" id="idHeader" title="Tooltip!">Id</th>
@@ -101,7 +103,26 @@
 
 	</div>
 </div>
-{% endblock %}
 
+{# Modals #}
+<div class="modal" id="crearNou" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h4 class="modal-title">Modal title</h4>
+        </div>
+        <div class="modal-body">
+          blabla
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Tancar</button>
+          <button type="button" class="btn btn-success">Save changes</button>
+        </div>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
+{% endblock %}
 
 
