--- a/src/ADG/PrincipalBundle/Resources/views/AdminNoticies/noticies.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/AdminNoticies/noticies.html.twig
@@ -10,6 +10,7 @@
     <script>   
 	$(document).ready(function() {
 		$('#noticies_table').dataTable({
+				"aaSorting": [[ 0, "desc" ]],
                 "sDom": "<'col-xs-4'l> <'col-xs-offset-1'f> rt <'col-xs-4'i><'col-xs-offset-1'p>",
                 "language": {
         			"sLengthMenu": "_MENU_ entrades per pàgina",
@@ -23,15 +24,12 @@
         		      },
         			"sSearch": "Cerca general: "
                 }
-        }).makeEditable({
-
-		});
+        })
 	} );
 		</script>
     </script>
     <script src="{{ asset('bundles/ADG/js/jquery.dataTables.js') }}" type="text/javascript"></script>
     <script src="{{ asset('bundles/ADG/js/dataTables.bootstrap.js') }}" type="text/javascript"></script>
-   	<script src="{{ asset('bundles/ADG/js/jquery.dataTables.editable.js') }}" type="text/javascript"></script>
 {% endblock %}
 
 {% block title %}Noticies{% endblock %}
@@ -74,8 +72,7 @@
 		<table class="table table-striped table-bordered table-hover" id="noticies_table">
         <thead>
             <tr>
-                <th class="centered-text" id="idHeader" title="Tooltip!">Id</th>
-                <th class="centered-text">Data</th>
+                <th class="centered-text" id="idHeader" title="Tooltip!">Data</th>
                 <th class="centered-text">Títol</th>
                 <th class="centered-text">Contingut</th>
                 {% if is_granted('ROLE_ADMIN') %}
@@ -86,14 +83,13 @@
             <tbody>
                 {% for noticia in noticies %}
                     <tr>
-                        <td>{{ noticia.id }}</td>
                         <td style="min-width: 100px">{{ noticia.data|date('d-m-Y') }}</td>
                         <td>{{ noticia.titol }}</td>
                         <td>{{ noticia.contingut }}</td>
                         {% if is_granted('ROLE_ADMIN') %}
                         	<td>
-                        		<a class="btn btn-xs btn-primary" type="button"><i class="icon-pencil"></i></a>
-                        		<a class="btn btn-xs btn-danger" type="button"><i class="icon-remove"></i></a>
+                        		<a data-toggle="modal" href="{{ path('noticies_editar', { 'id': noticia.id }) }}" data-target="#editarNoticia" class="btn btn-xs btn-primary" type="button"><i class="icon-pencil"></i></a>
+                        		<a data-toggle="modal" href="{{ path('noticies_eliminar', { 'id': noticia.id }) }}" data-target="#eliminarNoticia" class="btn btn-xs btn-danger" type="button"><i class="icon-remove"></i></a>
                         	</td>
                         {% endif %}
                     </tr>
@@ -122,11 +118,11 @@
 		        <div class="space10"></div>
 		        <label for="password">Contingut</label>
 		       	<div class="form-group">
-				  <input type="text" class="form-control" name="contingut" required="required" >
+				  <input type="text" class="form-control" rows="3" name="contingut" required="required" >
 				</div>
 	        </div>
 	        <div class="modal-footer">
-	          <button class="btn btn-danger" data-dismiss="modal">Tancar</button>
+	          <button class="btn btn-default" data-dismiss="modal">Tancar</button>
 	          <button class="btn btn-success" type="submit">Guardar</button>
 	        </div>
 		</form><!-- /.form -->
@@ -135,6 +131,11 @@
     </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
+<div class="modal" id="editarNoticia" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+</div><!-- /.modal -->
+
+<div class="modal" id="eliminarNoticia" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+</div><!-- /.modal -->
 {% endblock %}
 
 
