Noticies: Added flash message on CRUD

--- a/src/ADG/PrincipalBundle/Resources/views/AdminNoticies/noticies.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/AdminNoticies/noticies.html.twig
@@ -61,6 +61,16 @@
             </div>
 		</form>    	
 	</div>
+	
+	{% for flashMessage in app.session.flashbag.get('success') %}
+	<div class="col-xs-9 col-sm-4 col-lg-4 col-lg-offset-2">
+	    <div class="alert alert-success alert-dismissable">
+	    	<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+	        <strong>{{ flashMessage }}</strong>
+	    </div>
+	</div>
+	{% endfor %}
+	
 </div>
 
 
