--- a/src/ADG/PrincipalBundle/Resources/views/AdminNoticies/eliminarNoticies.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/AdminNoticies/eliminarNoticies.html.twig
@@ -1,5 +1,5 @@
  <div class="modal-dialog ">
-      <div class="modal-content alert alert-danger">
+      <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
           <h4 class="modal-title">Eliminar notícia</h4>
