--- a/src/ADG/ArxiuBundle/Resources/views/Guia/guia.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/Guia/guia.html.twig
@@ -4,14 +4,11 @@
 
 {% block stylesheets %}
 	{{ parent() }}
-		<link href="{{ asset('bundles/adg/css/dtree.css') }}" rel="stylesheet"> 
 {% endblock %}
 
 
 {% block javascripts %}
 	{{ parent() }}
-	<script src="{{ asset('bundles/ADG/js/dtree.js') }}" type="text/javascript"></script>
-	
 {% endblock %}
 
 
@@ -22,33 +19,47 @@
         <h1>Classificació de l'arxiu</h1>
 	</div>
 
-<div class="dtree">
-
-
-	<script type="text/javascript">
-		<!--
-
-		d = new dTree('d');
-
-		d.add(0,-1,'My example tree');
-		d.add(1,0,'Node 1','example01.html');
-		d.add(2,0,'Node 2','example01.html');
-		d.add(3,1,'Node 1.1','example01.html');
-		d.add(4,0,'Node 3','example01.html');
-		d.add(5,3,'Node 1.1.1','example01.html');
-		d.add(6,5,'Node 1.1.1.1','example01.html');
-		d.add(7,0,'Node 4','example01.html');
-		d.add(8,1,'Node 1.2','example01.html');
-		d.add(9,0,'My Pictures','example01.html','Pictures I\'ve taken over the years','','','img/imgfolder.gif');
-		d.add(10,9,'The trip to Iceland','example01.html','Pictures of Gullfoss and Geysir');
-		d.add(11,9,'Mom\'s birthday','example01.html');
-		d.add(12,0,'Recycle Bin','example01.html','','','img/trash.gif');
-
-		document.write(d);
-
-		//-->
-	</script>
-
+<div class="row" style="margin-left:0px">	
+	<div class="col-xs-8 col-sm-10 col-md-8 col-lg-6 well">
+    	<h4>Continguts:</h4>
+    	current id: {{ currentId }}
+    	
+    	<div class="list-group">
+			{% for f in allFons %}
+				{% if currentId starts with f.nivell %}
+					<a href="{{ path('fons', { 'fons': f.nivell }) }}" class="list-group-item">
+						<i class="icon-folder-open"></i>
+						{{ f.nivell }} {{ f.titol }}
+					</a>
+					
+					<div class="list-group" style="margin-left: 15px;">
+						{% for sf in subFons %}
+							{% if currentId starts with sf.nivell %}
+								<a href="{{ path('sub',{ 'selSub': sf.nivell }) }}" class="list-group-item">
+									<i class="icon-folder-open"></i>
+									{{ sf.nivell }} {{ sf.titol }}
+								</a>
+								blabla
+								
+								
+							{% else %}
+								<a href="{{ path('sub', { 'selSub': sf.nivell }) }}" class="list-group-item">
+									<i class="icon-folder-close"></i>
+									{{ sf.nivell }} {{ sf.titol }}
+								</a>
+							{% endif %}
+						{% endfor %}
+					</div><!-- /.subFons --> 
+					
+				{% else %}
+					<a href="{{ path('fons', { 'fons': f.nivell }) }}" class="list-group-item">
+						<i class="icon-folder-close"></i>
+						{{ f.nivell }} {{ f.titol }}
+					</a>
+				{% endif %}
+			{% endfor %}
+		</div><!-- /.Fons --> 
+	</div>
 </div>
 	
 	
