Input pattern for ArxiuGuia

--- a/src/ADG/ArxiuBundle/Resources/views/Guia/guia.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/Guia/guia.html.twig
@@ -93,6 +93,7 @@
 		  </div>
 		  <div class="panel-body">
 		    Panel content
+		    <input type="text" class="form-control" pattern="^([0-9]*\.)*$" title="Només pot tenir números, lletres i punts. Finalitzat amb un punt.">
 		  </div>
 		</div>
 	</div>
